--- a/platformio.ini
+++ b/platformio.ini
@@ -32,6 +32,8 @@ board_build.filesystem = spiffs
 board_build.partitions = large_spiffs_16MB.csv
 build_type = debug  ; Change to "release" for release build
 test_framework = unity
+test_build_src = true
+test_port = /dev/ttyACM0
 build_flags =
   -w
   -Wl,--gc-sections
