--- a/platformio.ini
+++ b/platformio.ini
@@ -24,6 +24,14 @@ extra_scripts =
 	pre:scripts/build/prebuild_cppflags.py
 build_unflags = -std=gnu++11 # The correct flag will be set by the cppflags python script...
 
+[env:native]
+test_framework = doctest
+platform = native
+test_build_src = false
+test_port = /dev/ttyACM0
+test_ignore = src/*
+build_type = debug  ; Change to "release" for release build
+
 [env:twatch-s3]
 platform = espressif32@6.3.0
 framework = arduino
@@ -32,8 +40,6 @@ board_build.filesystem = spiffs
 board_build.partitions = large_spiffs_16MB.csv
 build_type = debug  ; Change to "release" for release build
 test_framework = unity
-test_build_src = true
-test_port = /dev/ttyACM0
 build_flags =
   -w
   -Wl,--gc-sections
