--- a/platformio.ini
+++ b/platformio.ini
@@ -23,6 +23,7 @@ extra_scripts =
 	pre:scripts/build/prebuild_info.py
 	pre:scripts/build/prebuild_cppflags.py
 build_unflags = -std=gnu++11 # The correct flag will be set by the cppflags python script...
+lib_ldf_mode = deep
 
 [env:native]
 test_framework = doctest
